스웨거  노트그룹에 대해서 추가
